<resources>
    <string name="app_name">Quran App</string>
    <string name="files_url">http://server6.mp3quran.net/thubti/</string>
    <string name="files_url_backup">http://212.24.105.152/quran/thubti/</string>


    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="fastforward">Forward</string>
    <string name="pause">Pause</string>
    <string name="download_finish">Download finished</string>
    <string name="file_does_not_exists">File does not exists. Start downloading the file..</string>
    <string name="settings">Settings</string>
    <string name="replace_the_buttons_icons_with_text">Replace the Buttons icons with Text</string>


    <string name="Al_Fatihah">Sourate Al-Fatihah</string>
    <string name="Al_Baqarah">Sourate Al-Baqarah</string>
    <string name="Sourah_Title">Sourate Sourah Title</string>
    <string name="Al_Imran">Sourate Al-Imran</string>
    <string name="An_Nisa">Sourate An-Nisa</string>
    <string name="Al_Maidah">Sourate Al-Ma\'idah</string>
    <string name="Al_Anam">Sourate Al-An\'am</string>
    <string name="Al_Araf">Sourate Al-A\'raf</string>
    <string name="Al_Anfal">Sourate Al-Anfal</string>
    <string name="At_Taubah">Sourate At-Taubah</string>
    <string name="Yunus">Sourate Yunus</string>
    <string name="Hood">Sourate Hood</string>
    <string name="Yusuf">Sourate Yusuf</string>
    <string name="Ar_Rad">Sourate Ar-Ra\'d</string>
    <string name="Ibrahim">Sourate Ibrahim</string>
    <string name="Al_Hijr">Sourate Al-Hijr</string>
    <string name="An_Nahl">Sourate An-Nahl</string>
    <string name="Al_Isra">Sourate Al-Isra</string>
    <string name="Al_Kahf">Sourate Al-Kahf</string>
    <string name="Maryam">Sourate Maryam</string>
    <string name="Taha">Sourate Taha</string>
    <string name="Al_Anbiya">Sourate Al-Anbiya\'</string>
    <string name="Al_Hajj">Sourate Al-Hajj</string>
    <string name="Al_Muminun">Sourate Al-Mu\'minun</string>
    <string name="An_Nur">Sourate An-Nur</string>
    <string name="Al_Furqan">Sourate Al-Furqan</string>
    <string name="Ash_Shuara">Sourate Ash-Shu\'ara\'</string>
    <string name="An_Naml">Sourate An-Naml</string>
    <string name="Al_Qasas">Sourate Al-Qasas</string>
    <string name="Al_Ankabut">Sourate Al-\'Ankabut</string>
    <string name="ArRoom">Sourate ArRoom</string>
    <string name="Luqman">Sourate Luqman</string>
    <string name="AsSajdah">Sourate AsSajdah</string>
    <string name="AlAhzab">Sourate AlAhzab</string>
    <string name="Saba">Sourate Saba\'</string>
    <string name="Fatir">Sourate Fatir</string>
    <string name="YaSin">Sourate YaSin</string>
    <string name="As_Saffat">Sourate As-Saffat</string>
    <string name="Sad">Sourate Sad</string>
    <string name="Az_Zumar">Sourate Az-Zumar</string>
    <string name="Ghafir">Sourate Ghafir</string>
    <string name="Fussilat">Sourate Fussilat</string>
    <string name="Ash_Shura">Sourate Ash-Shura</string>
    <string name="Az_Zukhruf">Sourate Az-Zukhruf</string>
    <string name="Ad_Dukhan">Sourate Ad-Dukhan</string>
    <string name="Al_Jathiya">Sourate Al-Jathiya</string>
    <string name="Al_Ahqaf">Sourate Al-Ahqaf</string>
    <string name="Muhammad">Sourate Muhammad</string>
    <string name="Al_Fath">Sourate Al-Fath</string>
    <string name="Al_Hujurat">Sourate Al-Hujurat</string>
    <string name="Qaf">Sourate Qaf</string>
    <string name="Az_Zariyat">Sourate Az-Zariyat</string>
    <string name="At_Tur">Sourate At-Tur</string>
    <string name="An_Najm">Sourate An-Najm</string>
    <string name="Al_Qamar">Sourate Al-Qamar</string>
    <string name="Ar_Rahman">Sourate Ar-Rahman</string>
    <string name="Al_Waqiah">Sourate Al-Waqi\'ah</string>
    <string name="Al_Hadid">Sourate Al-Hadid</string>
    <string name="Al_Mujadilah">Sourate Al-Mujadilah</string>
    <string name="Al_Hashr">Sourate Al-Hashr</string>
    <string name="Al_Mumtahinah">Sourate Al-Mumtahinah</string>
    <string name="As_Saff">Sourate As-Saff</string>
    <string name="Al_Jumuah">Sourate Al-Jumu\'ah</string>
    <string name="Al_Munafiqun">Sourate Al-Munafiqun</string>
    <string name="At_Taghabun">Sourate At-Taghabun</string>
    <string name="At_Talaq">Sourate At-Talaq</string>
    <string name="At_Tahrim">Sourate At-Tahrim</string>
    <string name="Al_Mulk">Sourate Al-Mulk</string>
    <string name="Al_Qalam">Sourate Al-Qalam</string>
    <string name="Al_Haqqah">Sourate Al-Haqqah</string>
    <string name="Al_Maarij">Sourate Al-Ma\'arij</string>
    <string name="Nooh">Sourate Nooh</string>
    <string name="Al_Jinn">Sourate Al-Jinn</string>
    <string name="Al_Muzzammil">Sourate Al-Muzzammil</string>
    <string name="Al_Muddaththir">Sourate Al-Muddaththir</string>
    <string name="Al_Qiyamah">Sourate Al-Qiyamah</string>
    <string name="Al_Insan">Sourate Al-Insan</string>
    <string name="Al_Mursalat">Sourate Al-Mursalat</string>
    <string name="An_Naba">Sourate An-Naba\'</string>
    <string name="An_Naziat">Sourate An-Nazi\'at</string>
    <string name="Abasa">Sourate \'Abasa</string>
    <string name="At_Takwir">Sourate At-Takwir</string>
    <string name="Al_Infitar">Sourate Al-Infitar</string>
    <string name="Al_Mutaffifin">Sourate Al-Mutaffifin</string>
    <string name="Al_Inshiqaq">Sourate Al-Inshiqaq</string>
    <string name="Al_Buruj">Sourate Al-Buruj</string>
    <string name="At_Tariq">Sourate At-Tariq</string>
    <string name="Al_Ala">Sourate Al-A\'la</string>
    <string name="Al_Ghashiyah">Sourate Al-Ghashiyah</string>
    <string name="Al_Fajr">Sourate Al-Fajr</string>
    <string name="Al_Balad">Sourate Al-Balad</string>
    <string name="Ash_Shams">Sourate Ash-Shams</string>
    <string name="Al_Lail">Sourate Al-Lail</string>
    <string name="Ad_Duha">Sourate Ad-Duha</string>
    <string name="Ash_Sharh">Sourate Ash-Sharh</string>
    <string name="At_Tin">Sourate At-Tin</string>
    <string name="Al_Alaq">Sourate Al-\'Alaq</string>
    <string name="Al_Qadr">Sourate Al-Qadr</string>
    <string name="Al_Baiyinah">Sourate Al-Baiyinah</string>
    <string name="Az_Zalzalah">Sourate Az-Zalzalah</string>
    <string name="Al_Adiyat">Sourate Al-\'Adiyat</string>
    <string name="Al_Qariah">Sourate Al-Qari\'ah</string>
    <string name="At_Takathur">Sourate At-Takathur</string>
    <string name="Al_Asr">Sourate Al-\'Asr</string>
    <string name="Al_Humazah">Sourate Al-Humazah</string>
    <string name="Al_Fil">Sourate Al-Fil</string>
    <string name="Quraish">Sourate Quraish</string>
    <string name="Al_Maun">Sourate Al-Ma\'un</string>
    <string name="Al_Kauthar">Sourate Al-Kauthar</string>
    <string name="Al_Kafirun">Sourate Al-Kafirun</string>
    <string name="An_Nasr">Sourate An-Nasr</string>
    <string name="Al_Masad">Sourate Al-Masad</string>
    <string name="Al_Ikhlas">Sourate Al-Ikhlas</string>
    <string name="Al_Falaq">Sourate Al-Falaq</string>
    <string name="An_Nas">Sourate An-Nas</string>
    <string name="downloading">Downloading......</string>
    <string name="internet_connection_error">Error: Internet connection is not available</string>
    <string name="file_is_corrupt">Error:File is corrupt, please try again.</string>
    <string name="not_enough_space">Error:Not Enough Storage Space Available.</string>
    <string name="delete_files_after_playing_theme">Delete files after playing them.</string>
    <string name="please_wait_for_file_to_finish_downloading">Error: Please wait for file/s to finish downloading.</string>
    <string name="cancel_the_download">Cancel Download</string>
    <string name="cancel_all_downloads">Cancel All</string>
    <string name="download_all">Download All</string>
    <string name="choose_the_titles_size">Choose The Titles size:</string>
    <string name="small_size_18sp">Small Size: 18sp</string>
    <string name="default_size_25sp">Default Size: 25sp</string>
    <string name="large_size_30sp">Large Size: 30sp</string>
    <string name="delete_this_sourah">Delete This Sourah</string>
    <string name="download_has_been_canceled">Download has been canceled.</string>
    <string name="don_t_redownload_after_closing_app">don\'t redownload after closing app</string>

</resources>
