<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="alkamli.fahad.quranapp.quranapp.UserSettingsActivity">

    <CheckBox
        android:text="@string/replace_the_buttons_icons_with_text"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/replaceIconsCheckBox" />

    <CheckBox
        android:text="@string/delete_files_after_playing_theme"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/replaceIconsCheckBox"
        android:layout_alignStart="@+id/replaceIconsCheckBox"
        android:layout_marginTop="15dp"
        android:id="@+id/deleteFilesCheckBox" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/choose_the_titles_size"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/deleteFilesCheckBox"
        android:layout_below="@+id/deleteFilesCheckBox"
        android:layout_marginTop="15dp"
        android:id="@+id/radioGroup"
        >
        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/small_size_18sp"
            android:id="@+id/smallSize"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/default_size_25sp"
            android:textSize="25sp"
            android:checked="true"
            android:id="@+id/defaultSize"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="match_parent"
            android:text="@string/large_size_30sp"
            android:textSize="30sp"
            android:id="@+id/largeSize"
            android:layout_height="wrap_content" />
        </RadioGroup>

</LinearLayout>
